WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
312567
[Flex] Fix imported/w3c/web-platform-tests/css/css-flexbox/flexbox-min-width-auto-005.html and -006.html
https://bugs.webkit.org/show_bug.cgi?id=312567
Summary
[Flex] Fix imported/w3c/web-platform-tests/css/css-flexbox/flexbox-min-width-...
alan
Reported
2026-04-17 06:48:08 PDT
ssia
Attachments
Patch
(5.21 KB, patch)
2026-04-17 06:51 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(4.25 KB, patch)
2026-04-17 07:26 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(4.25 KB, patch)
2026-04-17 09:45 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2026-04-17 06:51:53 PDT
Created
attachment 479130
[details]
Patch
alan
Comment 2
2026-04-17 07:26:06 PDT
Created
attachment 479133
[details]
Patch
alan
Comment 3
2026-04-17 09:45:37 PDT
Created
attachment 479147
[details]
[fast-cq]Patch
EWS
Comment 4
2026-04-17 10:43:59 PDT
### macOS Safer C++ Build [#93651](
https://ews-build.webkit.org/#/builders/120/builds/93651
) () :warning: Found 1 fixed file! Please update expectations in `Source/[Project]/SaferCPPExpectations` by running the following command and update your patch: - `Tools/Scripts/update-safer-cpp-expectations -p JavaScriptCore --MemoryUnsafeCastChecker runtime/JSBigInt.h --platform macOS`
EWS
Comment 5
2026-04-17 10:47:19 PDT
### iOS Safer C++ Build [#12532](
https://ews-build.webkit.org/#/builders/174/builds/12532
) () :warning: Found 1 fixed file! Please update expectations in `Source/[Project]/SaferCPPExpectations` by running the following command and update your patch: - `Tools/Scripts/update-safer-cpp-expectations -p JavaScriptCore --MemoryUnsafeCastChecker runtime/JSBigInt.h --platform iOS`
EWS
Comment 6
2026-04-20 05:10:22 PDT
Committed
311578@main
(e9d18bf8e3d2): <
https://commits.webkit.org/311578@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 479147
[details]
.
Radar WebKit Bug Importer
Comment 7
2026-04-20 05:11:12 PDT
<
rdar://problem/175157619
>
alan
Comment 8
2026-05-13 06:26:17 PDT
***
Bug 296560
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug